--- a/portfolio_P.html
+++ b/portfolio_P.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 
-        <link rel="stylesheet" href="C:\Users\PranavCKumar\Desktop\stylePort.css">
+        <link rel="stylesheet" href="https://github.com/FierceFox9/RandomCodes/blob/master/stylePort.css">
         <h1 style="color: darkblue; background-color: darkkhaki; margin-top: auto; position: relative; ">
             Portfolio
             
